# government-announcements

./: .env  pyproject.toml
config/: darshi_master_seed.json
data/: bokaro.nic.in_results.json  ranchi.nic.in_results.json  s3waas_wordlist.txt
data/processed/bokaro/: consolidated_report.json
data/processed/ranchi/: all_assets_summary.json  consolidated_report.json  summaries.json
resources/: idor_scan_results.csv  lgd-bodies-pincodes.json
scripts/: igod_ministries_recursive_scraper.py  igod_states_recursive_scraper.py  output.txt  populate_igod_ministries_registry.py  spider_s3waas.py
scripts/tmp/: lgd_matcher.py
sources/anomalies/: redirects.md
sources/registry/01_union_of_india/apex/: cabinet_secretariat.yaml  pmo.yaml  president_secretariat.yaml  vice_president.yaml
sources/registry/01_union_of_india/constitutional_bodies/: cag.yaml  cic.yaml  eci.yaml  nhrc.yaml  upsc.yaml
sources/registry/01_union_of_india/judiciary/: nclat.yaml  ngt.yaml  supreme_court.yaml
sources/registry/01_union_of_india/legislative/: gazette_of_india.yaml  loksabha.yaml  rajyasabha.yaml
sources/registry/02_states_and_uts/andaman_and_nicobar_islands/: _state_meta.yaml
sources/registry/02_states_and_uts/andhra_pradesh/: _state_meta.yaml
sources/registry/03_special_economic_zones/: cochin_sez.yaml  falta_sez.yaml  gift_city_ifsc.yaml  kandla_sez.yaml  mepz.yaml  noida_sez.yaml  seepz_sez.yaml
sources/scrapers/: core_engine.py
sources/scrapers/adapters/: __init__.py  s3waas.py
sources/scrapers/utils/: __init__.py  downloader.py  intelligence.py
(+1816 files in other folders)
